[tool.poetry]
name = "gf-http-service"
version = "0.1.0"
description = ""
authors = ["dabmax <dabmax@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
ansible = "8.7.0"
requests = "^2.32.3"
pytest = "^8.3.3"
pytest-cov = "^6.0.0"
blue = "^0.9.1"
isort = "^5.13.2"
taskipy = "^1.14.0"


[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.5.44"
mkdocstrings = "^0.27.0"
mkdocstrings-python = "^1.12.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
